things are done

--- a/workshop/exercise-8/index.html
+++ b/workshop/exercise-8/index.html
@@ -1,1 +1,46 @@
-<!-- ...crickets... -->
+<!DOCTYPE html>
+<html>
+<head>
+</head>
+<body>
+    <h1>Registration form</h1>
+    <form action="username">
+        Username
+        <required>
+        <input type="text">
+        Password
+        <input type="password">
+        <div>
+            Email
+            <input type="email">
+        </div>
+        <div>
+            Which taxi do you require?
+            <input type="radio">Car
+            <input type="radio">Van
+            <input type="radio">Tuk Tuk
+        </div>
+        </required>
+        <div>
+            Extras
+            <input type="checkbox"> Baby Seat
+            <input type="checkbox"> Wheelchair Access
+            <input type="checkbox"> Stock Tip
+        <div>
+            Pick up
+            <select>
+                <option value="Select One"></option>
+                <option value="Taxi Office">Taxi Office</option>
+                <option value="City Hall">City Hall</option>
+                <option value="We'll guess">We'll Guess</option>
+            </select>
+        </div>
+        <div>
+            Special
+            <textarea name="" id="" cols="15" rows="2"></textarea>
+            <input type="submit">
+        </div>
+    </form>
+
+</body>
+</html>
