--- a/workshop/exercise-5/index.html
+++ b/workshop/exercise-5/index.html
@@ -6,11 +6,15 @@
     <p></p>
     <ul>
         <li>Javascript</li>
+        <li>Brownies</li>
+        <li>Dad Jokes</li>
     </ul>
     <h3>Fun facts</h3>
-    <p>languages are spoken today</p>
-    <img />
-    <p></p>
+    <p>7,111 languages are spoken today</p>
+    <img src="./imgs/languages.png"/>
+    <p>There are ~250 popular programming languages based on 
+        <a href="https://www.tiobe.com/tiobe-index/">the TIOBE index</a>
+    </p>
 </body>
 
 </html>
